--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -10,7 +10,7 @@
     {% for livro in livros %}
     <ul>
         <li>
-            {{ livro.nome }}
+            {{ livro.titulo }}
             {{ livro.editora }}
             {{ livro.publicado }}
         </li>
