feat: implementação da pagina Home

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -19,5 +19,6 @@
         <a href="{% url 'deletar_livro' livro.id %}">Deletar Livro</a>
     {% endfor %}
     <a href="{% url 'adicionar_livro' %}">Adicionar Livro</a>
+    <a href="{% url 'home' %}">Voltar</a>
 </body>
 </html>
