--- a/app/templates/list_autor.html
+++ b/app/templates/list_autor.html
@@ -18,5 +18,6 @@
         <a href="{% url 'deletar_autor' autor.id %}">Deletar Autor</a>
     {% endfor %}
     <a href="{% url 'adicionar_autor' %}">Adicionar Autor</a>
+    <a href="{% url 'home' %}">Voltar</a>
 </body>
 </html>
