--- a/app/templates/list_usuario.html
+++ b/app/templates/list_usuario.html
@@ -18,5 +18,6 @@
         <a href="{% url 'deletar_usuario' usuario.id %}">Deletar Usuario</a>
     {% endfor %}
     <a href="{% url 'adicionar_usuario' %}">Adicionar Usuario</a>
+    <a href="{% url 'home' %}">Voltar</a>
 </body>
 </html>
