fix: Atualização de titulo do template

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>bem vindo a minha pagina principal</h1>
+    <h1>Gerenciador de Livros</h1>
     <ul>
         <li><a href="{% url 'listar_livros' %}">Lista de Livros</a></li>
         <li><a href="{% url 'listar_autores' %}">Lista de Autores</a></li>
